# impact

./: .gitignore  Cargo.toml  README.md  a.out  build.rs  kek  kek.ll  package-lock.json  rustfmt.toml
docs/: full.md
examples/: sample.imp
peg/: .eslintrc.json  README.md  nodemon.json  package-lock.json  package.json  peggy-js.pegjs  repl.js  tsconfig.json  tsconfig.tsbuildinfo
peg/src/: ast.ts  compiler.ts  index.ts  js-gen.ts  kek.ts  parser-ctx.ts  prelude.ts  typeck.ts  types.ts  utils.ts  value.ts
src/: lib.rs  main.rs
src/ast/: expr.rs  item.rs  map.rs  mod.rs  pat.rs  stmt.rs  ty.rs  validator.rs  visitor.rs
src/cli/: cli.rs  color.rs  command.rs  mod.rs
src/codegen/: body.rs  builtin.rs  codegen.rs  ctx.rs  expr.rs  func.rs  mod.rs  mono.rs  nodes.rs  value.rs
src/config/: config.rs
src/dt/: arena.rs  bool_enum.rs  idx.rs  maps.rs  mod.rs  new_type.rs  sync.rs
src/hir/: expr.rs  item.rs  mod.rs  pat.rs  stmt.rs  ty.rs  visitor.rs
src/interface/: ctx.rs  interface.rs  mod.rs  writer.rs
src/lower/: mod.rs
src/message/: debug_emitter.rs  human_lang.rs  message.rs  mod.rs  term_emitter.rs
src/mir/: block.rs  build.rs  expr.rs  local.rs  mod.rs  pat_matches.rs  scalar.rs  stmt.rs
src/parser/: lexer.rs  mod.rs  parser.rs  token.rs
src/pp/: README.md  ast.rs  defs.rs  hir.rs  mir.rs  mod.rs  parser_stage.rs  pp.rs  res.rs  thir.rs
src/resolve/: README.md  builtin.rs  collect.rs  def.rs  expand.rs  mod.rs  res.rs  resolve.rs
src/session/: mod.rs  sess.rs  session.rs  stage.rs
src/span/: mod.rs  source.rs  span.rs  sym.rs
src/thir/: build.rs  (+1 more)
tests/: sources.rs
(+27 files in other folders)
