[package]
name = "impact"
version = "0.1.0"
edition = "2021"
authors = ["hazer_hazer <gordeev.john@gmail.com>"]
    
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

[features]
verbose_debug = []
pp_lines = []
