[package]
name = "impact"
version = "0.1.0"
edition = "2021"
authors = ["hazer_hazer <gordeev.john@gmail.com>"]

[lib]
name = "impact"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12.0"
inkwell = { version = "0.1.1", features = ["llvm14-0"] }
regex = "1"
lazy_static = "1.4.0"
convert_case = "0.6.0"
similar = "2.2.1"
clap = { version = "4.1.6", features = ["derive"] }
clap_complete = "4.1.2"

[features]
verbose_debug = []
pp_lines = []
